@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Desktop Wallpaper
-_Comment=Desktop Wallpaper Preferences
+_Name=Desktop Background
+_Comment=Change your Desktop Background settings
 Exec=gnome-background-properties
 Icon=gnome-settings-background
 Terminal=false
