@@ -1,3 +1,11 @@
+2004-02-04  Rodney Dawes  <dobey@ximian.com>
+
+	* background.desktop.in: Use "Desktop Background" as name and change
+	  the Comment line to a verb phrase as per the HIG
+	* gnome-wp-capplet.c (gnome_wp_load_stuffs): Fix a little bug so that
+	  opening the capplet with "No Wallpaper" set, actually works
+	  (wallpaper_properties_init): "Desktop Background Preferences"
+
 2004-02-01  Rodney Dawes  <dobey@ximian.com>
 
 	* Makefile.am: Switch the binary name to gnome-background-properties,
